--- a/2.JSの基礎知識.md
+++ b/2.JSの基礎知識.md
@@ -45,3 +45,22 @@
 
     ```
     
+- 分割代入
+  - オブジェクトや配列でいちいち`${myProfile.age}`と書くのが面倒
+  - `const {name,age} = myProfile;` と入れておけば`${name}`で取り出せる　
+  - 配列なら{}ではなく[]を用いる　順番を変えることは出来ない
+  - `const {name:n , age:a}`とするとnで取り出すことも出来る
+
+- デフォルト値
+  - JSでは因数が渡されなかった場合undifinedになってしまう　なので
+  - `const sayHello = (name = "guest") => console.log(name)`  としてデフォルト値を設定する
+
+- スプレッド構文
+  - `...`で順番に展開してくれる
+    ```
+    const arr1 = [1,2];
+    console.log(arr1); //[1,2]
+    console.log(...arr1); //1 2
+    ```
+  - これを利用して配列の結合、複製などの操作もできる(spliceでも可能)・・・イコールで複製するとコピー元に影響が出てしまう
+  
